# Engine

./: CMakeLists.txt  ECS_build.cmake  Engine.cmake  Engine_build.cmake  README.MD  README.md  TestCore_build.cmake  conanfile.txt
Tester/Event-dispatcher/: CMakeLists.txt
Tester/Event-dispatcher/include/: Event.hpp  EventPool.hpp  EventPool.inl  ThreadPool.hpp  Trigger.hpp  Trigger.inl  TriggerMap.hpp  TriggerMap.inl  tsQueue.hpp  tsQueue.inl
Tester/Event-dispatcher/src/: ThreadPool.cpp  main.cpp
Tester/Own-rendering-windows/: CMakeLists.txt
Tester/Own-rendering-windows/include/: CircleList.hpp  CircleList.inl  Event.hpp  IDrawable.hpp  Image.hpp  Pixel.hpp  PolyTri.hpp  Rect.hpp  RenderTarget.hpp  RenderWindow.hpp  Sprite.hpp  Vertex.hpp  VertexArray.hpp  Window.hpp  Window.inl
Tester/Own-rendering-windows/include/Engine/: Area.hpp  Color.hpp  Point2.hpp  Point2.inl  PreProcessing.hpp
Tester/Own-rendering-windows/src/: Image.cpp  PolyTri.cpp  RenderTarget.cpp  RenderWindow.cpp  Sprite.cpp  Vertex.cpp  VertexArray.cpp  Window.cpp  main.cpp
include/: Core.hpp  Player.hpp
include/ECS/: Entity.hpp  Manager.hpp  Manager.inl  Register.hpp  Register.inl
include/ECS/Component/: Arithmetic.hpp  Component.hpp  Id.hpp  Model.hpp  Stat.hpp
include/ECS/System/: ISystem.hpp  RenderModel.hpp  System.hpp
include/Engine/: Camera.hpp  ThreadPool.hpp  ThreadPool.inl  Window.hpp
include/Engine/Container/: CircleList.hpp  CircleList.inl  TriggerMap.hpp  TriggerMap.inl  tsQueue.hpp  tsQueue.inl
include/Engine/Event/: Event.hpp  EventHub.hpp  EventHub.inl  EventPool.hpp  EventPool.inl  Property.hpp  Property.inl  PropertyEvent.hpp  Trigger.hpp  Trigger.inl
include/Engine/Maths/: Maths.hpp  Maths.inl  Matrix.hpp  Matrix.inl  Point2.hpp  Point2.inl  Point3.hpp  Point3.inl
include/Engine/Network/: Acceptor.hpp  Acceptor.inl  BasicSocket.hpp  Buffer.hpp  Buffer.inl  Ip.hpp  Ip.inl  Socket.hpp  SocketSelector.hpp
include/Engine/Network/tcp/: Acceptor.hpp  Socket.hpp
include/Engine/Rendering/: Camera.hpp  Color.hpp  Data.hpp  IDrawable.hpp  IDrawable3D.hpp  Image.hpp  Loader.hpp  Model.hpp  PolyTri.hpp  Rect.hpp  RenderTarget.hpp  RenderTarget3D.hpp  RenderTexture.hpp  RenderWindow.hpp  Sprite.hpp  Texture.hpp  Triangle.hpp  Vertex.hpp  VertexArray.hpp  ZBuffer.hpp
include/Engine/Ressource/: Data.hpp  Loader.hpp  Model.hpp
include/Engine/System/: Key.hpp  Mouse.hpp  ThreadPool.hpp  Window.hpp
include/Engine/Tool/: PreProcessing.hpp  Splitter.hpp
include/Tool/: Export.hpp  PreProcessing.hpp  Splitter.hpp
include/XML/: Balise.hpp  Builder.hpp  Token.hpp  Tokenizer.hpp
include/XML/Factory/: Balise.hpp  Balise.inl  Base.hpp  Base.inl
include/XML/Object/: Clickable.hpp  Clickable.inl  Rectangle.hpp  Rectangle.inl
include/XML/UI/: AssetObject.hpp  AssetObject.inl  BaseObject.hpp  ContainerObject.hpp  ContainerObject.inl  EventObject.hpp  EventObject.inl  IAcceptEvent.hpp  Object.hpp  Object.inl  ObjectRegistre.hpp  PropertyBinder.hpp  PropertyBinder.inl  PropertyObject.hpp  PropertyObject.inl  PropertyRegister.hpp  PropertyRegister.inl  PropertyRegistre.hpp  PropertyRegistre.inl  TransformableObject.hpp  TransformableObject.inl
rsc/: data
script/: Opgen.py  op.hpp
src/: Core.cpp  Player.cpp  main.cpp
src/ECS/: Entity.cpp  Manager.cpp
src/ECS/System/: RenderModel.cpp
src/Engine/: Camera.cpp  Window.cpp
src/Engine/Network/: BasicSocket.cpp  Buffer.cpp  Ip.cpp  Socket.cpp  SocketSelector.hpp
src/Engine/Rendering/: Camera.cpp  Color.cpp  Image.cpp  Loader.cpp  Model.cpp  PolyTri.cpp  RenderTarget.cpp  RenderTarget3D.cpp  RenderTexture.cpp  RenderWindow.cpp  Sprite.cpp  VertexArray.cpp  ZBuffer.cpp
src/Engine/Ressource/: Loader.cpp  Model.cpp
src/Engine/System/: Key.cpp  Mouse.cpp  ThreadPool.cpp  Window.cpp
src/Tool/: Splitter.cpp
src/XML/: Balise.cpp  Builder.cpp  Tokenizer.cpp
src/XML/Object/: Rectangle.cpp
src/XML/UI/: BaseObject.cpp  ContainerObject.cpp  Object.cpp  ObjectRegistre.cpp  PropertyRegister.cpp  PropertyRegistre.inl
(+23 files in other folders)
